--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,23 @@
             "@userActions/*": ["./src/libs/actions/*"]
         }
     },
-    "include": ["src", "desktop", "web", "website", "docs", "assets", "config", "tests", "jest", "__mocks__", ".github/**/*", ".storybook/**/*", "scripts", "modules/index.ts"],
+    "include": [
+        "src",
+        "desktop",
+        "web",
+        "website",
+        "docs",
+        "assets",
+        "config",
+        "tests",
+        "jest",
+        "__mocks__",
+        ".github/**/*",
+        ".storybook/**/*",
+        "scripts",
+        "modules/index.ts",
+        "**/*.nitro/*.ts",
+        "**/*.nitro/*.tsx"
+    ],
     "exclude": ["**/node_modules/*", "**/dist/*", ".github/actions/**/index.js", "**/docs/*"]
 }
