--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,8 @@ jobs:
 
       - name: Get app version
         id: getAppVersion
-        run: echo "VERSION=$(jq -r .version < package.json)" >> "$GITHUB_OUTPUT"
+# TODO: REVERT
+        run: echo "VERSION=9.0.64-4" >> "$GITHUB_OUTPUT"
 
 #      - name: Create and push tag
 #        if: ${{ github.ref == 'refs/heads/staging' }}
