--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -188,7 +188,8 @@ jobs:
           git submodule update --init
           # Update submodule to latest on staging
           git fetch
-          git checkout staging
+# TODO: REVERT
+          git checkout andrew-hybridapp-prod
 
       - name: Configure MapBox SDK
         run: ./scripts/setup-mapbox-sdk.sh ${{ secrets.MAPBOX_SDK_DOWNLOAD_TOKEN }}
@@ -521,7 +522,8 @@ jobs:
           git submodule update --init
           # Update submodule to latest on staging
           git fetch
-          git checkout staging
+# TODO: REVERT
+          git checkout andrew-hybridapp-prod
 
       - name: Configure MapBox SDK
         run: |
