chore(deps): use NitroSQLite, add nitro dependency and update Onyx

--- a/package.json
+++ b/package.json
@@ -152,7 +152,9 @@
     "react-native-launch-arguments": "^4.0.2",
     "react-native-localize": "^2.2.6",
     "react-native-modal": "^13.0.0",
-    "react-native-onyx": "2.0.81",
+    "react-native-nitro-modules": "^0.17.0",
+    "react-native-nitro-sqlite": "^9.0.1",
+    "react-native-onyx": "git+https://github.com/margelo/react-native-onyx#3b624bb8a0a328ec258b785d41081e462435711a",
     "react-native-pager-view": "6.5.0",
     "react-native-pdf": "6.7.3",
     "react-native-performance": "^5.1.0",
@@ -160,7 +162,6 @@
     "react-native-picker-select": "git+https://github.com/Expensify/react-native-picker-select.git#da50d2c5c54e268499047f9cc98b8df4196c1ddf",
     "react-native-plaid-link-sdk": "11.11.0",
     "react-native-qrcode-svg": "6.3.11",
-    "react-native-quick-sqlite": "git+https://github.com/margelo/react-native-nitro-sqlite#99f34ebefa91698945f3ed26622e002bd79489e0",
     "react-native-reanimated": "3.16.1",
     "react-native-release-profiler": "^0.2.1",
     "react-native-render-html": "6.3.1",
