Revert two more lines

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -185,8 +185,7 @@ jobs:
           git submodule update --init
           # Update submodule to latest on staging
           git fetch
-          # TODO: REVERT
-          git checkout andrew-hybridapp-prod
+          git checkout staging
 
       - name: Configure MapBox SDK
         run: ./scripts/setup-mapbox-sdk.sh ${{ secrets.MAPBOX_SDK_DOWNLOAD_TOKEN }}
@@ -516,8 +515,7 @@ jobs:
           git submodule update --init
           # Update submodule to latest on staging
           git fetch
-          # TODO: REVERT
-          git checkout andrew-hybridapp-prod
+          git checkout staging
 
       - name: Configure MapBox SDK
         run: |
