--- a/package.json
+++ b/package.json
@@ -171,7 +171,7 @@
     "react-native-svg": "15.9.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-view-shot": "3.8.0",
+    "react-native-view-shot": "4.0.0-alpha.3",
     "react-native-vision-camera": "^4.6.1",
     "react-native-web": "0.19.13",
     "react-native-webview": "13.8.6",
