--- a/.github/workflows/checkE2ETestCode.yml
+++ b/.github/workflows/checkE2ETestCode.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   lint:
     if: ${{ github.actor != 'OSBotify' || github.event_name == 'workflow_call' }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
