--- a/.github/workflows/cherryPick.yml
+++ b/.github/workflows/cherryPick.yml
@@ -32,7 +32,7 @@ jobs:
 
   cherryPick:
     needs: createNewVersion
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout staging branch
         uses: actions/checkout@v4
