--- a/.github/workflows/deployBlocker.yml
+++ b/.github/workflows/deployBlocker.yml
@@ -12,7 +12,7 @@ jobs:
 
   deployBlocker:
     if: github.event.label.name == 'DeployBlockerCash'
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
