--- a/.github/workflows/imgbot.yml
+++ b/.github/workflows/imgbot.yml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   approveAndMerge:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     if: ${{ github.actor == 'imgbot[bot]' }}
     steps:
       - name: Approve imgbot PR
