--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -1,12 +1,13 @@
-name: CLA Assistant
-
+name: CLA Check
 on:
-  issue_comment:
-    types: [created]
-  pull_request_target:
-    types: [opened, synchronize]
-
+  pull_request:
+    types: [opened, synchronize, reopened]
 jobs:
-  CLA:
-    uses: Expensify/GitHub-Actions/.github/workflows/cla.yml@main
-    secrets: inherit
+  cla-check:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run CLA Assistant
+        uses: contributor-assistant/github-action@latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
