--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -1,13 +1,22 @@
-name: CLA Check
+name: PR Author Checklist
+
 on:
-  pull_request:
-    types: [opened, synchronize, reopened]
+  # We use pull_request_target here so that the GitHub token will have read/write access and be able to modify the PR description if needed.
+  # Warning: – when using the pull_request_target event, DO NOT checkout code from an untrusted branch: https://securitylab.github.com/research/github-actions-preventing-pwn-requests/
+  pull_request_target:
+    types: [opened, edited, reopened, synchronize]
+
 jobs:
-  cla-check:
+  # Note: PHP specifically looks for the name of this job, "checklist", so if the name of the job is changed,
+  # then you also need to go into PHP and update the name of this job in the GH_JOB_NAME_CHECKLIST constant
+  checklist:
     runs-on: ubuntu-20.04
+    if: github.actor != 'OSBotify' && github.actor != 'imgbot[bot]'
     steps:
-      - name: Run CLA Assistant
-        uses: contributor-assistant/github-action@latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: authorChecklist.ts
+        uses: ./.github/actions/javascript/authorChecklist
+        with:
+          GITHUB_TOKEN: ${{ github.token }}
