--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -1,22 +1,12 @@
-name: PR Author Checklist
+name: CLA Assistant
 
 on:
-  # We use pull_request_target here so that the GitHub token will have read/write access and be able to modify the PR description if needed.
-  # Warning: – when using the pull_request_target event, DO NOT checkout code from an untrusted branch: https://securitylab.github.com/research/github-actions-preventing-pwn-requests/
+  issue_comment:
+    types: [created]
   pull_request_target:
-    types: [opened, edited, reopened, synchronize]
+    types: [opened, synchronize]
 
 jobs:
-  # Note: PHP specifically looks for the name of this job, "checklist", so if the name of the job is changed,
-  # then you also need to go into PHP and update the name of this job in the GH_JOB_NAME_CHECKLIST constant
-  checklist:
-    runs-on: ubuntu-20.04
-    if: github.actor != 'OSBotify' && github.actor != 'imgbot[bot]'
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: authorChecklist.ts
-        uses: ./.github/actions/javascript/authorChecklist
-        with:
-          GITHUB_TOKEN: ${{ github.token }}
+  CLA:
+    uses: Expensify/GitHub-Actions/.github/workflows/cla.yml@main
+    secrets: inherit
