--- a/.github/workflows/authorChecklist.yml
+++ b/.github/workflows/authorChecklist.yml
@@ -10,7 +10,7 @@ jobs:
   # Note: PHP specifically looks for the name of this job, "checklist", so if the name of the job is changed,
   # then you also need to go into PHP and update the name of this job in the GH_JOB_NAME_CHECKLIST constant
   checklist:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     if: github.actor != 'OSBotify' && github.actor != 'imgbot[bot]'
     steps:
       - name: Checkout
