--- a/.github/workflows/androidBump.yml
+++ b/.github/workflows/androidBump.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   android_bump:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
