--- a/.github/workflows/createNewVersion.yml
+++ b/.github/workflows/createNewVersion.yml
@@ -35,7 +35,7 @@ on:
 
 jobs:
   validateActor:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     outputs:
       HAS_WRITE_ACCESS: ${{ contains(fromJSON('["write", "admin"]'), steps.getUserPermissions.outputs.PERMISSION) }}
     steps:
