--- a/.github/workflows/reassurePerformanceTests.yml
+++ b/.github/workflows/reassurePerformanceTests.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   perf-tests:
     if: ${{ github.actor != 'OSBotify' }}
-    runs-on: ubuntu-20.04-reassure-tests
+    runs-on: ubuntu-latest-reassure-tests
     steps:
       - name: Checkout
         uses: actions/checkout@v4
