--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   newContributorWelcomeMessage:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     if: ${{ github.actor != 'OSBotify' && github.actor != 'imgbot[bot]' }}
     steps:
       - name: Checkout
