--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -163,25 +163,46 @@ jobs:
     name: Build and deploy Android HybridApp
     needs: prep
     runs-on: ubuntu-latest-xl
+    defaults:
+      run:
+        working-directory: Mobile-Expensify/react-native
     steps:
-      - name: Checkout App and Mobile-Expensify repo
+      - name: Checkout App repo
+        uses: actions/checkout@v4
+
+      - name: Checkout Mobile-Expensify repo
         uses: actions/checkout@v4
         with:
+          repository: 'Expensify/Mobile-Expensify'
           submodules: true
+          path: 'Mobile-Expensify'
           token: ${{ secrets.OS_BOTIFY_TOKEN }}
           # fetch-depth: 0 is required in order to fetch the correct submodule branch
           fetch-depth: 0
 
-      - name: Update submodule to match main
+      - name: Update submodule
         run: |
-          git submodule update --init --remote
+          git submodule update --init
+          # Update submodule to latest on staging
+          git fetch
+          git checkout staging
 
       - name: Configure MapBox SDK
         run: ./scripts/setup-mapbox-sdk.sh ${{ secrets.MAPBOX_SDK_DOWNLOAD_TOKEN }}
 
-      - name: Setup Node
-        id: setup-node
-        uses: ./.github/actions/composite/setupNode
+      - uses: actions/setup-node@v4
+        with:
+          node-version-file: 'Mobile-Expensify/react-native/.nvmrc'
+          cache: npm
+          cache-dependency-path: 'Mobile-Expensify/react-native'
+
+      - name: Install node modules
+        run: |
+          npm install
+          cd .. && npm install
+          
+          # Fixes https://github.com/Expensify/App/issues/51682
+          npm run grunt:build:shared
 
       - name: Setup Java
         uses: actions/setup-java@v4
@@ -193,6 +214,7 @@ jobs:
         uses: ruby/setup-ruby@v1.190.0
         with:
           bundler-cache: true
+          working-directory: 'Mobile-Expensify/react-native'
 
       - name: Install New Expensify Gems
         run: bundle install
@@ -207,7 +229,7 @@ jobs:
           op document get --output ./upload-key.keystore upload-key.keystore 
           op document get --output ./android-fastlane-json-key.json android-fastlane-json-key.json
           # Copy the keystore to the Android directory for Fullstory
-          cp ./upload-key.keystore Mobile-Expensify/Android 
+          cp ./upload-key.keystore ../Android 
 
       - name: Load Android upload keystore credentials from 1Password
         id: load-credentials
@@ -474,31 +496,47 @@ jobs:
     runs-on: macos-13-xlarge
     env:
       DEVELOPER_DIR: /Applications/Xcode_15.2.0.app/Contents/Developer
+    defaults:
+      run:
+        working-directory: Mobile-Expensify/react-native
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
+          repository: 'Expensify/Mobile-Expensify'
           submodules: true
+          path: 'Mobile-Expensify'
           token: ${{ secrets.OS_BOTIFY_TOKEN }}
           # fetch-depth: 0 is required in order to fetch the correct submodule branch
           fetch-depth: 0
 
       - name: Update submodule
         run: |
-          git submodule update --init --remote
+          git submodule update --init
+          # Update submodule to latest on staging
+          git fetch
+          git checkout staging
 
       - name: Configure MapBox SDK
         run: |
           ./scripts/setup-mapbox-sdk.sh ${{ secrets.MAPBOX_SDK_DOWNLOAD_TOKEN }}
 
-      - name: Setup Node
+      - uses: actions/setup-node@v4
         id: setup-node
-        uses: ./.github/actions/composite/setupNode
+        with:
+          node-version-file: 'Mobile-Expensify/react-native/.nvmrc'
+          cache-dependency-path: 'Mobile-Expensify/react-native'
+
+      - name: Install node modules
+        run: |
+          npm install
+          cd .. && npm install
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1.190.0
         with:
           bundler-cache: true
+          working-directory: 'Mobile-Expensify/react-native'
 
       - name: Install New Expensify Gems
         run: bundle install
@@ -507,12 +545,12 @@ jobs:
         uses: actions/cache@v4
         id: pods-cache
         with:
-          path: Mobile-Expensify/ios/Pods
-          key: ${{ runner.os }}-pods-cache-${{ hashFiles('Mobile-Expensify/ios/Podfile.lock', 'firebase.json') }}
+          path: ios/Pods
+          key: ${{ runner.os }}-pods-cache-${{ hashFiles('ios/Podfile.lock', 'firebase.json') }}
 
       - name: Compare Podfile.lock and Manifest.lock
         id: compare-podfile-and-manifest
-        run: echo "IS_PODFILE_SAME_AS_MANIFEST=${{ hashFiles('Mobile-Expensify/ios/Podfile.lock') == hashFiles('Mobile-Expensify/ios/Pods/Manifest.lock') }}" >> "$GITHUB_OUTPUT"
+        run: echo "IS_PODFILE_SAME_AS_MANIFEST=${{ hashFiles('ios/Podfile.lock') == hashFiles('ios/Pods/Manifest.lock') }}" >> "$GITHUB_OUTPUT"
 
       - name: Install cocoapods
         uses: nick-fields/retry@3f757583fb1b1f940bc8ef4bf4734c8dc02a5847
@@ -520,7 +558,7 @@ jobs:
         with:
           timeout_minutes: 10
           max_attempts: 5
-          command: npm run pod-install
+          command: cd Mobile-Expensify/iOS && pod install
 
       - name: Install 1Password CLI
         uses: 1password/install-cli-action@v1
