--- a/.github/workflows/reassurePerformanceTests.yml
+++ b/.github/workflows/reassurePerformanceTests.yml
@@ -22,6 +22,12 @@ jobs:
             git config --global user.email "test@test.com"
             git config --global user.name "Test"
 
+      - name: Get common ancestor commit
+        run: |
+            git fetch origin main
+            common_ancestor=$(git merge-base "${{ github.sha }}" origin/main)
+            echo "COMMIT_HASH=$common_ancestor" >> "$GITHUB_ENV"
+
       - name: Clean up deleted files
         run: |
             DELETED_FILES=$(git diff --name-only --diff-filter=D "$COMMIT_HASH" "${{ github.sha }}")
