--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -183,6 +183,10 @@ jobs:
         id: setup-node
         uses: ./.github/actions/composite/setupNode
 
+      - name: Run grunt build
+        run: |
+            npm run grunt:build:shared
+
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
