Execute script in correct folder

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -185,6 +185,7 @@ jobs:
 
       - name: Run grunt build
         run: |
+            cd Mobile-Expensify
             npm run grunt:build:shared
 
       - name: Setup Java
