Run script in correct folder

--- a/.github/workflows/testBuildHybrid.yml
+++ b/.github/workflows/testBuildHybrid.yml
@@ -118,6 +118,7 @@ jobs:
       
       - name: Run grunt build
         run: |
+            cd Mobile-Expensify
             npm run grunt:build:shared
 
       - name: Setup dotenv
