Add standalone installation scripts

--- a/package.json
+++ b/package.json
@@ -7,22 +7,24 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "i-standalone": "STANDALONE_NEW_DOT=true npm i",
+    "install-standalone": "STANDALONE_NEW_DOT=true npm install",
     "configure-mapbox": "./scripts/setup-mapbox-sdk-walkthrough.sh",
     "setupNewDotWebForEmulators": "./scripts/setup-newdot-web-emulators.sh",
     "startAndroidEmulator": "./scripts/start-android.sh",
     "postinstall": "./scripts/postInstall.sh",
     "clean": "./scripts/clean.sh",
-    "clean-standalone": "./scripts/clean.sh --new-dot",
+    "clean-standalone": "STANDALONE_NEW_DOT=true ./scripts/clean.sh",
     "android": "./scripts/set-pusher-suffix.sh && ./scripts/run-build.sh --android",
-    "android-standalone": "./scripts/set-pusher-suffix.sh && ./scripts/run-build.sh --android --new-dot",
+    "android-standalone": "./scripts/set-pusher-suffix.sh && STANDALONE_NEW_DOT=true ./scripts/run-build.sh --android",
     "ios": "./scripts/set-pusher-suffix.sh && ./scripts/run-build.sh --ios",
-    "ios-standalone": "./scripts/set-pusher-suffix.sh && ./scripts/run-build.sh --ios --new-dot",
+    "ios-standalone": "./scripts/set-pusher-suffix.sh && STANDALONE_NEW_DOT=true ./scripts/run-build.sh --ios",
     "pod-install": "./scripts/pod-install.sh",
-    "pod-install-standalone": "./scripts/pod-install.sh --new-dot",
+    "pod-install-standalone": "STANDALONE_NEW_DOT=true ./scripts/pod-install.sh",
     "ipad": "concurrently \"./scripts/run-build.sh --ipad\"",
-    "ipad-standalone": "concurrently \"./scripts/run-build.sh --ipad --new-dot\"",
+    "ipad-standalone": "concurrently \"STANDALONE_NEW_DOT=true ./scripts/run-build.sh --ipad\"",
     "ipad-sm": "concurrently \"./scripts/run-build.sh --ipad-sm\"",
-    "ipad-sm-standalone": "concurrently \"./scripts/run-build.sh --ipad-sm --new-dot\"",
+    "ipad-sm-standalone": "concurrently \"STANDALONE_NEW_DOT=true ./scripts/run-build.sh --ipad-sm\"",
     "start": "npx react-native start",
     "web": "./scripts/set-pusher-suffix.sh && concurrently npm:web-proxy npm:web-server",
     "web-proxy": "ts-node web/proxy.ts",
