--- a/ios/NewExpensify/Info.plist
+++ b/ios/NewExpensify/Info.plist
@@ -50,6 +50,8 @@
 	</dict>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+	<key>NSContactsUsageDescription</key>
+	<string>Import contacts from your phone so your favorite people are always a tap away.</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>venmo</string>
