--- a/.github/actions/composite/setupNode/action.yml
+++ b/.github/actions/composite/setupNode/action.yml
@@ -1,6 +1,12 @@
 name: Set up Node
 description: Set up Node
 
+inputs:
+  IS_HYBRID_BUILD:
+    description: "Indicates if node is set up for hybrid app"
+    required: false
+    default: 'false'
+
 outputs:
   cache-hit:
     description: Was there a cache hit on the main node_modules?
@@ -27,6 +33,13 @@ runs:
         path: node_modules
         key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json', 'patches/**') }}
 
+    - id: cache-old-dot-node-modules
+      if: inputs.IS_HYBRID_BUILD == 'true'
+      uses: actions/cache@v4
+      with:
+        path: Mobile-Expensify/node_modules
+        key: ${{ runner.os }}-node-modules-${{ hashFiles('Mobile-Expensify/package-lock.json', 'Mobile-Expensify/patches/**') }}
+
     - id: cache-desktop-node-modules
       uses: actions/cache@v4
       with:
@@ -34,12 +47,12 @@ runs:
         key: ${{ runner.os }}-desktop-node-modules-${{ hashFiles('desktop/package-lock.json', 'desktop/patches/**') }}
 
     - name: Install root project node packages
-      if: steps.cache-node-modules.outputs.cache-hit != 'true'
+      if:  (steps.cache-node-modules.outputs.cache-hit != 'true') || (inputs.IS_HYBRID_BUILD == 'true' && steps.cache-old-dot-node-modules.outputs.cache-hit != 'true') 
       uses: nick-fields/retry@3f757583fb1b1f940bc8ef4bf4734c8dc02a5847
       with:
         timeout_minutes: 30
         max_attempts: 3
-        command: npm ci
+        command: rm -rf node_modules && npm ci # if we want to build hybrid app then we have to remove ND node_modules first
 
     - name: Install node packages for desktop submodule
       if: steps.cache-desktop-node-modules.outputs.cache-hit != 'true'
