--- a/package.json
+++ b/package.json
@@ -207,6 +207,7 @@
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-syntax-typescript": "^7.27.1",
     "@babel/plugin-transform-class-properties": "^7.25.4",
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-flow": "^7.12.13",
@@ -237,15 +238,16 @@
     "@react-native-community/cli-platform-android": "15.0.1",
     "@react-native-community/cli-platform-ios": "15.0.1",
     "@react-native-community/eslint-config": "3.2.0",
+    "@react-native/babel-plugin-codegen": "^0.79.2",
     "@react-native/babel-preset": "0.77.1",
     "@react-native/metro-config": "0.77.1",
     "@react-navigation/devtools": "^6.0.10",
     "@rnef/cli": "^0.7.6",
     "@rnef/platform-android": "^0.7.6",
     "@rnef/platform-ios": "^0.7.6",
+    "@rnef/plugin-metro": "^0.7.6",
     "@rnef/plugin-repack": "^0.7.6",
     "@rspack/core": "~1.2.0",
-    "@rnef/plugin-metro": "^0.7.6",
     "@storybook/addon-a11y": "^8.6.9",
     "@storybook/addon-essentials": "^8.6.9",
     "@storybook/addon-webpack5-compiler-babel": "^3.0.5",
@@ -292,6 +294,7 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "babel-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
     "babel-plugin-react-native-web": "^0.18.7",
+    "babel-plugin-syntax-hermes-parser": "^0.28.1",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "clean-webpack-plugin": "^4.0.0",
     "concurrently": "^8.2.2",
